--- a/login.css
+++ b/login.css
@@ -84,7 +84,7 @@ input[type=submit]:hover {
 }
 
 /* text inside the vertical line */
-.inner {
+/* .inner {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -92,12 +92,12 @@ input[type=submit]:hover {
   border: 1px solid #ccc;
   border-radius: 50%;
   padding: 8px 10px;
-}
+} */
 
 /* hide some text on medium and large screens */
-.hide-md-lg {
+/* .hide-md-lg {
   display: none;
-}
+} */
 
 /* bottom container */
 .bottom-container {
